--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -1,9 +1,9 @@
 .root {
   width: 50%;
   height: 3rem;
-  margin: 0 auto;
+  margin: 0 25%;
   font-size: 2.5rem;
   padding: .5rem;
   border-radius: 4px;
-  appearance: searchfield;
+  appearance: none;
 }
